# llm-agent-base

./: README.md  agent_base.py  agent_pipeline_base.py  knowledge_base.py  llm_connection_config.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
llm_agent_base/: __init__.py  agent_base.py  agent_pipeline_base.py  knowledge_base.py  tool_calling.py
