[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-agent-base"
version = "0.1.2"
description = "Lightweight Python framework for building LLM agents with tool calling and RAG"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Paweł Gryka", email = "pawel.m.gryka@gmail.com"},
]
license = "MIT"
keywords = ["llm", "agent", "rag", "openai", "tool-calling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "openai>=2.0.0",
    "faiss-cpu>=1.7.0",
    "pypdf>=4.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mksochota16/llm-agent-base"
Repository = "https://github.com/mksochota16/llm-agent-base"

[tool.setuptools.packages.find]
include = ["llm_agent_base*"]
